--- a/static/index.html
+++ b/static/index.html
@@ -69,23 +69,39 @@
       <div v-if="loading">
         loading...
       </div>
-      
+
       <div class="error" v-if="error">
         <div class="alert alert-danger" role="alert">
           <h4 class="alert-heading">Error Occurred!</h4>
           <p>{{error}}</p>
           <hr />
-          <p>
-            <ul >
+          <ul>
             <li class="" v-for="line in traceback">
-              {{line}} </li
-            >
-            </ul>
-          </p>
+              {{line}}
+            </li>
+          </ul>
         </div>
       </div>
       <div v-if="!loading && !error">
-        <h3>Total entries {{items.length}}</h3>
+        <div class="row mb-2">
+          <div class="col">
+            <h3>Total entries {{items.length}}</h3>
+          </div>
+          <div class="col">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">Sort By</span>
+              <select class="form-select" v-model="item_sort_by">
+                <option
+                  v-bind:value="col"
+                  v-for="col in sort_by_columns"
+                  :key="col"
+                  >{{col}}</option
+                >
+              </select>
+            </div>
+          </div>
+        </div>
+
         <div>
           <div
             class="card mb-2"
@@ -93,17 +109,112 @@
             :key="item['Sl No']"
           >
             <div class="card-header">
-              {{item['RC No']}}
+              <div class="row">
+                <div class="col"><h5>{{item[rc_key]}}</h5></div>
+                <div class="col text-end">
+                  <button
+                    type="button"
+                    class="btn btn-primary btn-sm"
+                    data-bs-toggle="modal"
+                    data-bs-target="#rcDetailsModal"
+                    @click="fetch_rc_details(item)"
+                  >
+                    Details
+                  </button>
+                </div>
+              </div>
             </div>
             <ul class="list-group">
-              <li
-                class="list-group-item"
-                v-for="header in headers"
-                :key="header"
-              >
-                {{header}}: <b>{{item[header]}}</b>
+              <li class="list-group-item">
+                <template v-for="key in items_columns">
+                  <span class="mb-2">{{key}}: <b>{{item[key]}}</b></span
+                  ><br />
+                </template>
               </li>
             </ul>
+          </div>
+          <div
+            class="modal"
+            id="rcDetailsModal"
+            tabindex="-1"
+            aria-labelledby="rcDetailsModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header justify-content-center">
+                  <div class="text-center">
+                    <h5 class="modal-title mb-1" id="rcDetailsModalLabel">
+                      RC Details
+                    </h5>
+                    {{detail_item && detail_item[rc_key]}}
+                  </div>
+                </div>
+                <div class="modal-body">
+                  <div v-if="details_loading">Loading details...</div>
+                  <div v-if="members.length || transactions.length">
+                    <div class="row">
+                      <div class="col">
+                        <h6>Total Members: {{members.length}}</h6>
+                      </div>
+                      <div class="col"><h6>Seeded: {{seeded_member}}</h6></div>
+                    </div>
+                    <hr />
+
+                    <h6>Transactions</h6>
+                    <ul class="list-group">
+                      <li
+                        class="list-group-item"
+                        v-for="trans in transactions"
+                        :key="trans['Sl.No']"
+                      >
+                        <template v-for="key in transaction_columns">
+                          <span class="mb-2"
+                            >{{key}}: <b>{{trans[key]}}</b></span
+                          ><br />
+                        </template>
+                      </li>
+                    </ul>
+
+                    <hr />
+                    <h6>Member List</h6>
+                    <ul
+                      class="list-group mb-1"
+                      v-for="member in members"
+                      :key="member['Sl.No']"
+                    >
+                      <li class="list-group-item">
+                        <template v-for="key in details_columns">
+                          <span class="mb-1"
+                            >{{key }}: <b>{{member[key]}}</b></span
+                          ><br />
+                        </template>
+                      </li>
+                    </ul>
+                  </div>
+                  <div v-if="details_error">
+                    <div class="alert alert-danger" role="alert">
+                      <h4 class="alert-heading">Error Occurred!</h4>
+                      <p>{{details_error}}</p>
+                      <hr />
+                      <ul>
+                        <li class="" v-for="line in details_traceback">
+                          {{line}}
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -116,7 +227,10 @@
       Vue.createApp({
         data() {
           return {
+            item_sort_by: "RC No",
+            rc_key: "RC No",
             loading: false,
+            details_loading: false,
             dist_code: 233,
             fpsid: 123300100909,
             year: new Date().getFullYear(),
@@ -124,21 +238,71 @@
             search_rc_number: "",
             error: "",
             traceback: "",
+            details_error: "",
+            details_traceback: "",
+            detail_item: null,
             items: [],
+            members: [],
+            transactions: [],
+            sort_by_columns: [
+              "RC No",
+              "Date",
+              "Auth Trans Time",
+              "Avail Type",
+              "Portability",
+              "Receipt No",
+              "Scheme",
+            ],
+            transaction_columns: [
+              "Member",
+              "Avail. Date",
+              "Avail. Type",
+              "AvailedFPS",
+              "Month",
+              "Year",
+            ],
+            items_columns: [
+              "RC No",
+              "Date",
+              "Auth Trans Time",
+              "Avail Type",
+              "Wheat(Kg)",
+              "Rice(Kg)",
+              "PMGKAY-Wheat-Old(Kg)",
+              "PMGKAY-Rice-Old(Kg)",
+              "PMGKAY whole chana(Kg)",
+              "PMGKAY Pulse(Kg)",
+              "PMGKAY-Wheat(Kg)",
+              "PMGKAY-Rice(Kg)",
+              "Amount(Rs.)",
+              "Portability",
+              "Receipt No",
+              "Scheme",
+            ],
+            details_columns: [
+              "Member",
+              "Status",
+              "Age",
+              "Gender",
+              "UID Status",
+            ],
           };
         },
         computed: {
+          seeded_member() {
+            return this.members.filter((mem) => mem["UID Status"] == "Seeded")
+              .length;
+          },
           headers() {
             if (this.items.length > 0) return Object.keys(this.items[0]);
             else return [];
           },
           filtered_items() {
-            var key = "RC No";
             if (this.search_rc_number)
               return this.items.filter(
                 (item) =>
-                  item[key].startsWith(this.search_rc_number) ||
-                  item[key].endsWith(this.search_rc_number)
+                  item[this.rc_key].startsWith(this.search_rc_number) ||
+                  item[this.rc_key].endsWith(this.search_rc_number)
               );
             else return this.items;
           },
@@ -165,6 +329,15 @@
           },
         },
         watch: {
+          item_sort_by() {
+            this.filtered_items.sort((a, b) => {
+              var a_attr = a[this.item_sort_by].toUpperCase();
+              var b_attr = b[this.item_sort_by].toUpperCase();
+              if (a_attr < b_attr) return -1;
+              if (a_attr > b_attr) return 1;
+              return 0;
+            });
+          },
           year() {
             this.fetch_items();
           },
@@ -179,9 +352,9 @@
         },
         methods: {
           fetch_items() {
-            this.error = ""
-            this.traceback = ""
-            this.loading = true
+            this.error = "";
+            this.traceback = "";
+            this.loading = true;
             axios
               .get("/get-sales-details", {
                 params: {
@@ -196,23 +369,53 @@
                 res.data.forEach((item) => {
                   this.items.push(item);
                 });
-                this.loading = false
+                this.loading = false;
               })
               .catch((error) => {
-                this.error = error;
-                console.log(Object.keys(error))
-                console.log(error.toJSON())
-                if (error && error.response) {
-                  this.error = error.response;
-                  if (error.response.data) {
-                    this.error = error.response.data;
-                    if (error.response.data.error)
-                      this.error = error.response.data.error;
-                    if (error.response.data.traceback)
-                      this.traceback = error.response.data.traceback;
-                  }
-                }
-                this.loading = false
+                var parsed_error = this.parse_error(error);
+                this.error = parsed_error.error;
+                this.traceback = parsed_error.traceback;
+                this.loading = false;
+              });
+          },
+          parse_error(error) {
+            var msg = error;
+            var traceback = [];
+            if (error && error.response) {
+              msg = error.response;
+              if (error.response.data) {
+                msg = error.response.data;
+                if (error.response.data.error) msg = error.response.data.error;
+                if (error.response.data.traceback)
+                  traceback = error.response.data.traceback;
+              }
+            }
+            return { error: msg, traceback: traceback };
+          },
+          fetch_rc_details(item) {
+            this.detail_item = item;
+            this.details_loading = true;
+            axios
+              .get("/get-rc-details", {
+                params: {
+                  rcnumber: item[this.rc_key],
+                  month: this.month,
+                  year: this.year,
+                },
+              })
+              .then((res) => {
+                this.members.splice(0, this.members.length);
+                res.data.members.forEach((mem) => {
+                  this.members.push(mem);
+                });
+                this.transactions = res.data.transactions;
+                this.details_loading = false;
+              })
+              .catch((error) => {
+                var parsed_error = this.parse_error(error);
+                this.details_error = parsed_error.error;
+                this.details_traceback = parsed_error.traceback;
+                this.details_loading = false;
               });
           },
         },
