--- a/static/index.html
+++ b/static/index.html
@@ -28,8 +28,9 @@
     <!-- Vue.js 3 -->
 
     <script src="https://cdn.jsdelivr.net/npm/axios@0.26.1/dist/axios.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/vue@3.2.31/dist/vue.global.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/lodash/4.13.1/lodash.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.2/moment.min.js"></script>
     <div id="app" class="container">
       <div class="text-center mb-4 mt-3">
         <h1>
@@ -37,6 +38,9 @@
         </h1>
 
         <div>{{fpsid}}</div>
+        <button class="btn btn-sm btn-primary" @click="fetch_items">
+          Reload
+        </button>
       </div>
       <div>
         <label>Select Month</label>
@@ -85,7 +89,7 @@
       <div v-if="!loading && !error">
         <div class="row mb-2">
           <div class="col">
-            <h3>Total entries {{items.length}}</h3>
+            <h4>Total entries {{items.length}}</h4>
           </div>
           <div class="col">
             <div class="input-group">
@@ -142,13 +146,19 @@
           >
             <div class="modal-dialog">
               <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                  <div class="text-center">
-                    <h5 class="modal-title mb-1" id="rcDetailsModalLabel">
+                <div class="modal-header">
+                  <div class="modal-title mb-1" id="rcDetailsModalLabel">
+                    <h5>
                       RC Details
                     </h5>
                     {{detail_item && detail_item[rc_key]}}
                   </div>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
                 </div>
                 <div class="modal-body">
                   <div v-if="details_loading">Loading details...</div>
@@ -227,7 +237,7 @@
       Vue.createApp({
         data() {
           return {
-            item_sort_by: "RC No",
+            item_sort_by: "Date",
             rc_key: "RC No",
             loading: false,
             details_loading: false,
@@ -331,6 +341,8 @@
         watch: {
           item_sort_by() {
             this.filtered_items.sort((a, b) => {
+              if (this.item_sort_by == "Date")
+                return this.compare_date(a["Date"], b["Date"]);
               var a_attr = a[this.item_sort_by].toUpperCase();
               var b_attr = b[this.item_sort_by].toUpperCase();
               if (a_attr < b_attr) return -1;
@@ -347,10 +359,16 @@
         },
         mounted() {
           if (this.month == 0) this.month = 11;
-
           this.fetch_items();
         },
         methods: {
+          compare_date(a, b) {
+            var a_date = moment(a, "DD-MM-YYYY");
+            var b_date = moment(b, "DD-MM-YYYY");
+            if (a_date.isAfter(b_date)) return -1;
+            if (b_date.isAfter(a_date)) return 1;
+            return 0;
+          },
           fetch_items() {
             this.error = "";
             this.traceback = "";
