--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
         <input
           v-model="search_rc_number"
           class="form-control"
-          type="text"
+          type="number"
           placeholder="Search by RC Number"
         />
       </div>
