search is text instead of number since it exceeds max integer limit

--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,8 @@
         <input
           v-model="search_rc_number"
           class="form-control"
-          type="number"
+          type="text"
+          inputmode="numeric"
           placeholder="Search by RC Number"
         />
       </div>
