--- a/static/index.html
+++ b/static/index.html
@@ -381,6 +381,24 @@
             if (b_date.isAfter(a_date)) return 1;
             return 0;
           },
+          await_task(task_id, success, error) {
+            axios.get(`/tasks/${task_id}`).then((res) => {
+              if (res.data.status === "SUCCESS") {
+                success(res.data);
+              } else if (
+                res.data.status === "FAILURE" ||
+                res.data.status === "REVOKED"
+              ) {
+                error(res.data);
+              } else {
+                // call this method again in 3 sec
+                setTimeout(() => {
+                  this.await_task(task_id, success, error);
+                }, 3000);
+              }
+              // else it being processing in one way or the other
+            });
+          },
           fetch_items() {
             this.error = "";
             this.traceback = "";
@@ -395,11 +413,19 @@
                 },
               })
               .then((res) => {
-                this.items.splice(0, this.items.length);
-                res.data.forEach((item) => {
-                  this.items.push(item);
-                });
-                this.loading = false;
+                this.await_task(
+                  res.data.task_id,
+                  (data) => {
+                    this.items.splice(0, data.result.length);
+                    data.result.forEach((item) => {
+                      this.items.push(item);
+                    });
+                    this.loading = false;
+                  },
+                  (data) => {
+                    this.error = data.result;
+                  }
+                );
               })
               .catch((error) => {
                 var parsed_error = this.parse_error(error);
@@ -436,12 +462,20 @@
                 },
               })
               .then((res) => {
-                this.members.splice(0, this.members.length);
-                res.data.members.forEach((mem) => {
-                  this.members.push(mem);
-                });
-                this.transactions = res.data.transactions;
-                this.details_loading = false;
+                this.await_task(
+                  res.data.task_id,
+                  (data) => {
+                    this.members.splice(0, this.members.length);
+                    data.result.members.forEach((mem) => {
+                      this.members.push(mem);
+                    });
+                    this.transactions = data.result.transactions;
+                    this.details_loading = false;
+                  },
+                  (data) => {
+                    this.error = data.result;
+                  }
+                );
               })
               .catch((error) => {
                 var parsed_error = this.parse_error(error);
