using https now

--- a/static/index.html
+++ b/static/index.html
@@ -231,7 +231,7 @@
       </div>
     </div>
     <script>
-      // POST here http://epos.bihar.gov.in/FPS_Trans_Details.jsp
+      // POST here https://epos.bihar.gov.in/FPS_Trans_Details.jsp
       // with
       // dist_code=233 fps_id=123300100909 month=3 year=2022
       console.log(new Date().getMonth());
