--- a/static/officers.html
+++ b/static/officers.html
@@ -66,7 +66,7 @@
       </div>
     </div>
     <script>
-      // POST here http://epos.bihar.gov.in/FPS_Trans_Details.jsp
+      // POST here https://epos.bihar.gov.in/FPS_Trans_Details.jsp
       // with
       // dist_code=233 fps_id=123300100909 month=3 year=2022
 
