--- a/static/collection.html
+++ b/static/collection.html
@@ -32,8 +32,16 @@
     <script src="https://cdn.jsdelivr.net/lodash/4.13.1/lodash.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.2/moment.min.js"></script>
     <div id="app" class="container">
-      <div class="text-center">
-        <h2 class="mt-3">Daily Collection Summary</h2>
+      <div class="text-center mb-4 mt-3">
+
+        <div class="d-flex gap-2" >
+          <a href="/" type="button" class="btn btn-secondary"> Home</a>
+          <a href="/collection" type="button" class="btn btn-primary"> Collection Amount</a>
+          <a href="/stock" type="button" class="btn btn-secondary"> Stock Details</a>
+        </div>
+
+        <h1 class="mt-3">Daily Collection Summary</h1>
+  
         <div>{{fpsid}}</div>
         <button class="btn btn-primary btn-sm m-3" @click="fetch_summaries()">
           Reload
