--- a/static/stock.html
+++ b/static/stock.html
@@ -69,8 +69,9 @@
         </div>
       </div>
 
-      <div v-if="loading">
-        Loading...
+      <div v-if="loading" class="text-center">
+        <span class="spinner-border" role="status"></span>
+        <div>Loading...</div>
       </div>
       <div class="error" v-if="error">
         <div class="alert alert-danger" role="alert">
