--- a/static/collection.html
+++ b/static/collection.html
@@ -34,10 +34,10 @@
     <div id="app" class="container">
       <div class="text-center mb-4 mt-3">
 
-        <div class="d-flex gap-2" >
+        <div class="d-flex gap-2 justify-content-center" >
           <a href="/" type="button" class="btn btn-secondary"> Home</a>
-          <a href="/collection" type="button" class="btn btn-primary"> Collection Amount</a>
-          <a href="/stock" type="button" class="btn btn-secondary"> Stock Details</a>
+          <a href="/collection" type="button" class="btn btn-primary"> Daily Summary</a>
+          <a href="/stock" type="button" class="btn btn-secondary"> Stock</a>
         </div>
 
         <h1 class="mt-3">Daily Collection Summary</h1>
