--- a/static/index.html
+++ b/static/index.html
@@ -30,10 +30,10 @@
   <div id="app" class="container">
     <div class="text-center mb-4 mt-3">
 
-      <div class="d-flex gap-2" >
+      <div class="d-flex gap-2 justify-content-center" >
         <a href="/" type="button" class="btn btn-primary"> Home</a>
-        <a href="/collection" type="button" class="btn btn-secondary"> Collection Amount</a>
-        <a href="/stock" type="button" class="btn btn-secondary"> Stock Details</a>
+        <a href="/collection" type="button" class="btn btn-secondary"> Daily Summary</a>
+        <a href="/stock" type="button" class="btn btn-secondary"> Stock</a>
       </div>
 
       <h1 class="mt-3">
@@ -45,7 +45,6 @@
       <button class="btn btn-sm btn-primary m-3" @click="fetch_items">
         Reload
       </button>
-
     
       <div class="d-flex flex-column m-2">    
         <div class="mt-2">
@@ -97,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="row mb-2">
+      <div class="row m-3">
         <div class="col">
           PHH: <b>{{filter_items("Scheme", "PHH").length}}</b>
         </div>
@@ -110,10 +109,12 @@
         <div class="card mb-2" v-for="item in filtered_items" :key="item['Sl No']">
           <div class="card-header">
             <div class="row">
-              <div class="col">
+              <div class="col-12">
                 <h5>{{item[rc_key]}}</h5>
               </div>
-              <div class="col text-end">
+              <div class="col-12" v-if="item.extra">{{item.extra.name}}</div>
+              <div class="col-12" v-if="item.extra">Seeded {{item.extra.seeded}} of {{item.extra.total}}</div>
+              <div class="col-12 text-end">
                 <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal"
                   data-bs-target="#rcDetailsModal" @click="fetch_rc_details(item)">
                   Details
@@ -199,6 +200,7 @@
     Vue.createApp({
       data() {
         return {
+          latest_task_id: null,
           item_sort_by: "Date",
           rc_key: "RC No",
           loading: false,
@@ -392,10 +394,7 @@
               this.await_task(
                 res.data.task_id,
                 (data) => {
-                  this.items.splice(0, data.result.length);
-                  data.result.forEach((item) => {
-                    this.items.push(item);
-                  });
+                  this.items = data.result
                   this.loading = false;
                 },
                 (data) => {
