added rc search page

--- a/static/stock.html
+++ b/static/stock.html
@@ -34,10 +34,11 @@
     <div id="app" class="container">
       <div class="text-center mb-4 mt-3">
         
-        <div class="d-flex gap-2 justify-content-center" >
-          <a href="/" type="button" class="btn btn-secondary"> Home</a>
-          <a href="/collection" type="button" class="btn btn-secondary"> Daily Summary</a>
-          <a href="/stock" type="button" class="btn btn-primary"> Stock</a>
+        <div class="d-flex gap-2 justify-content-center align-items-center">
+          <a href="/" type="button" class="btn btn-secondary btn-sm"> Home</a>
+          <a href="/collection" type="button" class="btn btn-secondary btn-sm"> Daily Summary</a>
+          <a href="/stock" type="button" class="btn btn-primary btn-sm"> Stock</a>
+          <a href="/search" type="button" class="btn btn-secondary btn-sm"> RC Search</a>
         </div>
 
         <h1 class="mt-3">
