--- a/static/index.html
+++ b/static/index.html
@@ -30,10 +30,11 @@
   <div id="app" class="container">
     <div class="text-center mb-4 mt-3">
 
-      <div class="d-flex gap-2 justify-content-center" >
-        <a href="/" type="button" class="btn btn-primary"> Home</a>
-        <a href="/collection" type="button" class="btn btn-secondary"> Daily Summary</a>
-        <a href="/stock" type="button" class="btn btn-secondary"> Stock</a>
+      <div class="d-flex gap-2 justify-content-center align-items-center">
+        <a href="/" type="button" class="btn btn-primary btn-sm"> Home</a>
+        <a href="/collection" type="button" class="btn btn-secondary btn-sm"> Daily Summary</a>
+        <a href="/stock" type="button" class="btn btn-secondary btn-sm"> Stock</a>
+        <a href="/search" type="button" class="btn btn-secondary btn-sm"> RC Search</a>
       </div>
 
       <h1 class="mt-3">
