--- a/static/search.html
+++ b/static/search.html
@@ -143,7 +143,7 @@
                     current_task_id: null,
                     task_timeout: undefined,
                     detail: {},
-                    columns: [
+                    member_cols: [
                         "Sl No.",
                         "Member Name",
                         "Age",
