adding pacs list

--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,7 @@
         <a href="/collection" type="button" class="btn btn-secondary btn-sm"> Daily Summary</a>
         <a href="/stock" type="button" class="btn btn-secondary btn-sm"> Stock</a>
         <a href="/search" type="button" class="btn btn-secondary btn-sm"> RC Search</a>
+        <a href="/pacs" type="button" class="btn btn-secondary btn-sm"> PACS 2024</a>
       </div>
 
       <h1 class="mt-3">
