--- a/static/stock.html
+++ b/static/stock.html
@@ -47,6 +47,7 @@
           <a href="/collection" type="button" class="btn btn-secondary btn-sm"> Daily Summary</a>
           <a href="/stock" type="button" class="btn btn-primary btn-sm"> Stock</a>
           <a href="/search" type="button" class="btn btn-secondary btn-sm"> RC Search</a>
+          <a href="/pacs" type="button" class="btn btn-secondary btn-sm"> PACS 2024</a>
         </div>
 
         <h1 class="mt-3">
